force-app/main/default/objects/WebEngage_Field_Mapping__mdt/WebEngage_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>WebEngage Field Mapping</label>
    <pluralLabel>WebEngage Field Mapping</pluralLabel>
</CustomObject>