force-app/main/default/objects/WebEngage_Field_Mapping__mdt/fields/IsDateTimeField__c.field-meta.xml
<CustomField>
    <fullName>IsDateTimeField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDateTimeField</label>
    <type>Checkbox</type>
</CustomField>