force-app/main/default/objects/WebEngage_Field_Mapping__mdt/fields/WebEngage_Event__c.field-meta.xml
<CustomField>
    <fullName>WebEngage_Event__c</fullName>
    <label>WebEngage Event</label>
    <referenceTo>WebEngage_Event__mdt</referenceTo>
    <relationshipLabel>WebEngage Field Mapping</relationshipLabel>
    <relationshipName>WebEngage_Field_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>