force-app/main/default/objects/WebEngage_Field_Mapping__mdt/fields/WebEngage_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>WebEngage_Field_API_Name__c</fullName>
    <label>WebEngage Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>