force-app/main/default/objects/WebEngage_Field_Mapping__mdt/listViews/All_Field_Mapping.listView-meta.xml
<ListView>
    <fullName>All_Field_Mapping</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsDateTimeField__c</columns>
    <columns>SF_Field_API_Name__c</columns>
    <columns>WebEngage_Event__c</columns>
    <columns>WebEngage_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Field Mapping</label>
</ListView>